Fixed home page banner spacing in IE9.

--- a/pyconca/static/pycon.css
+++ b/pyconca/static/pycon.css
@@ -102,7 +102,7 @@ a.bubble:hover {
 }
 
 .nav-spacer {
-  margin-left: 14px;
+  margin-left: 12px;
 }
 @media (min-width: 1100px) {
   .nav-spacer {
@@ -271,10 +271,6 @@ footer .contact-list span {
     text-indent: -9999px;
     overflow: hidden;
     height: 0;
-  /*font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-  /*font-weight: 400;*/
-  /*color: #fff;*/
-  /*text-shadow: 0px -1px 0px #000;*/
 }
 @media (min-width: 570px) {
   #Banner h1 {
@@ -308,6 +304,11 @@ footer .contact-list span {
   margin-top: 120px;
   font-weight: bold;
   float: none;
+}
+@media (min-width: 980px) {
+  .ie9 .home-page #DateAndPlace {
+    margin-top: 65px;
+  }
 }
 @media (max-width: 979px) {
   .home-page #DateAndPlace {
